decreased size of banner, added social media icons and changed some font sizes

--- a/www/src/components/Banner/Banner.scss
+++ b/www/src/components/Banner/Banner.scss
@@ -1,18 +1,32 @@
 .banner{
     background-color: rgba(236, 236, 250, 0.933);
-}
 
-.aws-sld__bullets{
-    bottom: 50px;
-    z-index: 2;
-}
+    .aws-sld{
+        &__wrapper{
+            height: 80vh;
+        }
 
-.aws-sld__bullets .aws-sld__bullets--active{
-    background: white;
-    border: 0.1px solid grey;
-}
+        &__box{
+            z-index: 1;
+        }
 
-.aws-sld__bullets button{
-    background: white;
-    border: 0.1px solid grey;
+        &__next, &__prev{
+            z-index: 2;
+        }
+        
+        &__bullets{
+            bottom: 50px;
+            z-index: 2;
+
+            button{
+                background: white;
+                border: none;
+            }
+
+            &--active{
+                background: black;
+                border: none;
+            }
+        }
+    }
 }
