--- a/www/src/components/NavBar/NavBar.scss
+++ b/www/src/components/NavBar/NavBar.scss
@@ -2,7 +2,7 @@
 
 .navbar{
     background-color: rgb(39, 39, 39);
-    height: 80px;
+    height: 100px;
     transition: height 1s;
     align-items: center;
 
@@ -25,7 +25,7 @@
             margin-left: 5vh;
             color: white;
             font-family: $raleway;
-            font-size: $bigText;
+            font-size: $bigTitle;
         }
 
         &_list{ 
@@ -39,7 +39,7 @@
                 text-decoration: none;
                 color: white;
                 font-family: $raleway;
-                font-size: $normal;
+                font-size: $bigText;
 
                 &:hover{
                     font-size: $normal + 2px;
